Revert "Fixed checkbox alignment issue in the legends panel"
This reverts commit 588130ad6599bf2f759c33e02d4560daf24697dd.

--- a/app/assets/stylesheets/old_elements/custom_objects.css.scss
+++ b/app/assets/stylesheets/old_elements/custom_objects.css.scss
@@ -566,7 +566,6 @@
     @include inline-block();
     vertical-align:middle;
     text-decoration:none;
-    line-height:1;
 
     span.check {
       position:relative;
