--- a/app/assets/stylesheets/table/table_panel/layer-views-panels/legends_panel.css.scss
+++ b/app/assets/stylesheets/table/table_panel/layer-views-panels/legends_panel.css.scss
@@ -222,7 +222,7 @@
           top: 12px;
           right: 0;
 
-          .checkbox { float: left; position:relative; margin:11px 15px 0 0; }
+          .checkbox { float: left; position:relative; margin:8px 15px 0 0; }
           .checkbox.disabled { cursor: pointer; }
           .checkbox span { margin:1px 5px 0 0; }
           .input { float: left; }
